--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,7 +20,7 @@
                     "column": 3,
                     "severity": 4,
                     "message": 5
-                } 
+                }
             }
         },
         {
@@ -37,7 +37,7 @@
                     "column": 3,
                     "severity": 4,
                     "message": 5
-                } 
+                }
             },
         },
         {
@@ -57,15 +57,15 @@
                     "column": 3,
                     "severity": 4,
                     "message": 5
-                } 
+                }
             },
         },
         {
             "label": "Half Flash - Flash the device",
             "type": "shell",
-            "command": "${config:idf.pythonBinPathWin} ${config:idf.espIdfPath}/components/esptool_py/esptool/esptool.py --chip esp32 -p ${config:idf.port} -b ${config:idf.baudRate} --before default_reset --after hard_reset write_flash -z --flash_mode dio --flash_freq 40m --flash_size detect 0xd000 build/ota_data_initial.bin 0x1000 build/bootloader/bootloader.bin 0x90000 build/esp32_connectag_hw9a.bin 0x8000 build/partition_table/partition-table.bin",
+            "command": "${config:idf.pythonBinPathWin} ${config:idf.espIdfPath}/components/esptool_py/esptool/esptool.py --chip esp32 -p ${config:idf.port} -b ${config:idf.baudRate} --before default_reset --after hard_reset write_flash -z --flash_mode dio --flash_freq 40m --flash_size detect 0xd000 build/ota_data_initial.bin 0x1000 build/bootloader/bootloader.bin 0x90000 build/esp32_lora_node.bin 0x8000 build/partition_table/partition-table.bin",
             "windows": {
-                "command": "${config:idf.pythonBinPathWin} ${config:idf.espIdfPathWin}\\components\\esptool_py\\esptool\\esptool.py --chip esp32 -p ${config:idf.portWin} -b ${config:idf.baudRate} --before default_reset --after hard_reset write_flash -z --flash_mode dio --flash_freq 40m --flash_size detect 0xd000 build/ota_data_initial.bin 0x1000 build/bootloader/bootloader.bin 0x90000 build/esp32_connectag_hw9a.bin 0x8000 build/partition_table/partition-table.bin"
+                "command": "${config:idf.pythonBinPathWin} ${config:idf.espIdfPathWin}\\components\\esptool_py\\esptool\\esptool.py --chip esp32 -p ${config:idf.portWin} -b ${config:idf.baudRate} --before default_reset --after hard_reset write_flash -z --flash_mode dio --flash_freq 40m --flash_size detect 0xd000 build/ota_data_initial.bin 0x1000 build/bootloader/bootloader.bin 0x90000 build/esp32_lora_node.bin 0x8000 build/partition_table/partition-table.bin"
             },
             "problemMatcher": {
                 "owner": "cpp",
@@ -77,7 +77,7 @@
                     "column": 3,
                     "severity": 4,
                     "message": 5
-                } 
+                }
             },
             "group": {
                 "kind": "build",
@@ -101,7 +101,7 @@
                     "column": 3,
                     "severity": 4,
                     "message": 5
-                } 
+                }
             }
         },
         {
@@ -121,7 +121,7 @@
                     "column": 3,
                     "severity": 4,
                     "message": 5
-                } 
+                }
             }
         },
         {
@@ -134,15 +134,15 @@
             }
         },
         {
-            "label":"OpenOCD: Start openOCD",
-            "type":"shell",
+            "label": "OpenOCD: Start openOCD",
+            "type": "shell",
             "presentation": {
                 "echo": true,
                 "reveal": "never",
                 "focus": false,
-                "panel":"new"
+                "panel": "new"
             },
-            "command":"openocd -s ${command:espIdf.getOpenOcdScriptValue} ${command:espIdf.getOpenOcdConfigs}",
+            "command": "openocd -s ${command:espIdf.getOpenOcdScriptValue} ${command:espIdf.getOpenOcdConfigs}",
             "windows": {
                 "command": "openocd.exe -s ${command:espIdf.getOpenOcdScriptValue} ${command:espIdf.getOpenOcdConfigs}"
             },
@@ -156,7 +156,7 @@
                     "column": 3,
                     "severity": 4,
                     "message": 5
-                } 
+                }
             },
         },
         {
@@ -184,7 +184,7 @@
                     "column": 3,
                     "severity": 4,
                     "message": 5
-                } 
+                }
             },
         },
     ]
