Implementado componente de sleep; Feita função para entrar em deep-sleep; Definidos wake up de GPIO e timer; Desativado LED durante sleep.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
         "editor.quickSuggestions": true
     },
     "C_Cpp.intelliSenseEngineFallback": "Disabled",
-    "idf.portWin": "COM4"
+    "idf.portWin": "COM4",
+    "files.associations": {
+        "gpio.h": "c"
+    }
 }
