--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "C_Cpp.intelliSenseEngineFallback": "Disabled",
     "idf.portWin": "COM4",
     "files.associations": {
-        "gpio.h": "c"
+        "gpio.h": "c",
+        "*.inc": "cpp"
     }
 }
