Flash baudrate 921600; Modificações iniciais para comunicação ABP (antes OTAA); Event callback personalizado; Auto-formatação de TheThingsNetwork.cpp;

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,13 @@
     "files.associations": {
         "gpio.h": "c",
         "*.inc": "cpp",
-        "*.ipp": "cpp"
-    }
+        "*.ipp": "cpp",
+        "lmic.h": "c",
+        "memory": "cpp",
+        "random": "cpp",
+        "future": "cpp",
+        "optional": "cpp"
+    },
+    "idf.flashType": "UART",
+    "idf.flashBaudRate": "921600"
 }
