--- a/components/LoRa/CMakeLists.txt
+++ b/components/LoRa/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register( SRCS LoRa.cpp
                         INCLUDE_DIRS include 
-                        REQUIRES ttn-esp32)
+                        REQUIRES ttn-esp32 ADC)
