Implementada a máquina de estados; Removida task de teste do LoRa; Macro para modo de debug.

--- a/components/Sleep/CMakeLists.txt
+++ b/components/Sleep/CMakeLists.txt
@@ -1,2 +1,3 @@
 idf_component_register( SRCS Sleep.cpp
-                        INCLUDE_DIRS include )
+                        INCLUDE_DIRS include 
+                        REQUIRES LoRa)
