--- a/components/SSD1306/CMakeLists.txt
+++ b/components/SSD1306/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register( SRCS ssd1306.c ssd1306_i2c.c ssd1306_spi.c
+idf_component_register( SRCS ssd1306.cpp ssd1306_i2c.cpp ssd1306_spi.cpp
                         INCLUDE_DIRS include 
                         REQUIRES )
