--- a/components/Sleep/CMakeLists.txt
+++ b/components/Sleep/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register( SRCS Sleep.cpp
                         INCLUDE_DIRS include 
-                        REQUIRES LoRa)
+                        REQUIRES OLED LoRa)
